test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_args_multiplicity/src/storage_attr.sw
library;

pub struct S { }

impl S {
    #[storage(read)]
    pub fn ok_1() { }

    #[storage(read, write)]
    pub fn ok_2() { }

    #[storage]
    #[storage()]
    #[storage(read, write, read)]
    pub fn not_ok() { }
}